# HarfBuzz feature options
option('glib', type: 'feature', value: 'auto',
  description: 'Enable GLib unicode functions')
option('gobject', type: 'feature', value: 'disabled',
  description: 'Enable GObject bindings')
option('cairo', type: 'feature', value: 'auto',
  description: 'Use Cairo graphics library')
option('fontconfig', type: 'feature', value: 'auto',
  description: 'Use fontconfig')
option('icu', type: 'feature', value: 'auto',
  description: 'Enable ICU library unicode functions')
option('graphite', type: 'feature', value: 'disabled',
  description: 'Enable Graphite2 complementary shaper')
option('freetype', type: 'feature', value: 'auto',
  description: 'Enable freetype interop helpers')
option('gdi', type: 'feature', value: 'disabled',
  description: 'Enable GDI helpers and Uniscribe shaper backend (Windows only)')
option('directwrite', type: 'feature', value: 'disabled',
  description: 'Enable DirectWrite shaper backend on Windows (experimental)')
option('coretext', type: 'feature', value: 'disabled',
  description: 'Enable CoreText shaper backend on macOS')

# Common feature options
option('tests', type : 'feature', value : 'enabled', yield : true,
  description: 'Enable or disable unit tests')
option('introspection', type : 'feature', value : 'disabled', yield : true,
  description : 'Generate gobject-introspection bindings (.gir/.typelib files)')

option('icu-builtin', type: 'boolean', value: false,
  description: 'Don\'t separate ICU support as harfbuzz-icu module')
option('with-libstdcxx', type: 'boolean', value: false,
   description: 'Allow linking with libstdc++ (ignored and always enabled in Windows)')
option('experimental-api', type: 'boolean', value: false,
  description: 'Enable experimental APIs')
option('amalgam', type : 'boolean', value : false,
  description : 'Enable amalgam builds')
